# zh_learn

./: .gitignore  README.md  pyproject.toml
results/: _characters__202207052236.sql  books_202207052236.sql  radicals_202207052236.sql  spoken_frequencies_202207052236.sql
src/migrations/: cn.sql
src/procedures/: 1_init_db.py  2_parse_dict.py  3_parse_compose.py  4a_parse_freq.py  4b_parse_freq_spoken.py  5_radical.py  6_dictionary_fill.py  7_sentences.py  db.py  utils.py
