[tool.poetry]
name = "cn_learn"
version = "0.1.0"
description = ""
authors = ["JackC90 <jckynchua@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8="1.5.4"
certifi="2020.6.20"
chardet="3.0.4"
idna="2.10"
numpy="1.19.2"
pycodestyle="2.6.0"
python-dateutil="2.8.1"
pytz="2020.1"
requests="2.24.0"
selenium="3.141.0"
six="1.15.0"
soupsieve="2.0.1"
toml="0.10.1"
urllib3="1.25.10"
pendulum = "^2.1.2"
psycopg2 = "^2.9.1"
pandas = "^1.3.0"
configparser = "^5.0.2"
tqdm = "^4.62.0"
webdriver-manager = "^3.4.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
